--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap');
 body {
     font-family: 'Inconsolata', monospace;
-    background-image: url('../img/background_2.png');
+    background-image: url('../img/background.png');
     background-size: cover;
     height: 100vh;
     font-size: 16px;
+    color: antiquewhite;
+    padding: 0 5%;
 }
-img {
-    height: 100px;
-    width: 100px;
-}
+
+/* Nav */
 .nav-bar {
     height: 10%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    gap: 30%;
-    background-color: rgba(0,0,0,.5);
+    justify-content: space-between;
+    gap: 10%;
 }
-.nav-bar img {
+.nav-bar .left-nav-bar img {
     height: 80%;
     width: auto;
 }
@@ -29,6 +28,7 @@ img {
 }
 .nav-bar .left-nav-bar ul {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
 }
 .nav-bar .left-nav-bar ul li {
@@ -40,7 +40,72 @@ img {
     font-size: 1.2rem;
 }
 .nav-bar .right-nav-bar {
+    width: 20%;
     display: flex;
     align-items: center;
-    gap: 10%;
+    justify-content: space-around;
+}
+.nav-bar .right-nav-bar img {
+    height: 50%;
+    width: auto;
+}
+#alien-img {
+    height: 75%;
+}
+
+/* Main */
+main {
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-bottom: 2%;
+}
+main h1 {
+    font-size: 5rem;
+    margin: 0;
+    text-shadow: 
+        0 0 5px #256680,
+        0 0 7px #588395,
+        0 0 10px #803241;
+    width: 50%;
+}
+main p {
+    margin: 2% 0;
+    font-size: 1.3rem;
+    width: 55%;
+}
+main .button-box {
+    width: 50%;
+    height: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+main .button-box button {
+    width: 48%;
+    height: 60%;
+    background: none;
+    border: 2px solid whitesmoke;
+    border-radius: 10px;
+    color: whitesmoke;
+}
+main .button-box #buy-now {
+    background-color: whitesmoke;
+    color: #0D0907;
+}
+
+/* Footer */
+footer {
+    height: 10%;
+    width: 70%;
+}
+footer .footer-logos {
+    margin-top: 2%;
+    height: 85%;
+    display: flex;
+    align-items: center;
+}
+footer .footer-logos img {
+    width: 20%;
 }
