--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ body {
     font-family: 'Inconsolata', monospace;
     background-image: url('../img/background.png');
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 100vh;
     font-size: 16px;
     color: antiquewhite;
@@ -17,14 +19,13 @@ body {
     justify-content: space-between;
     gap: 10%;
 }
-.nav-bar .left-nav-bar img {
-    height: 80%;
-    width: auto;
-}
 .nav-bar .left-nav-bar {
     display: flex;
     align-items: center;
-
+}
+.nav-bar .left-nav-bar img {
+    height: 80%;
+    width: auto;
 }
 .nav-bar .left-nav-bar ul {
     display: flex;
@@ -42,6 +43,7 @@ body {
 .nav-bar .right-nav-bar {
     width: 20%;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
 }
@@ -60,6 +62,7 @@ main {
     flex-direction: column;
     justify-content: flex-end;
     margin-bottom: 2%;
+    width: 50%;
 }
 main h1 {
     font-size: 5rem;
@@ -68,15 +71,12 @@ main h1 {
         0 0 5px #256680,
         0 0 7px #588395,
         0 0 10px #803241;
-    width: 50%;
 }
 main p {
     margin: 2% 0;
     font-size: 1.3rem;
-    width: 55%;
 }
 main .button-box {
-    width: 50%;
     height: 15%;
     display: flex;
     justify-content: space-between;
@@ -108,4 +108,25 @@ footer .footer-logos {
 }
 footer .footer-logos img {
     width: 20%;
+}
+
+/* Media Querys */
+@media (max-width: 620px) {
+    body {
+        padding: 0 10px;
+    }
+    nav-bar {
+        gap: 0;
+    }
+    .nav-bar .left-nav-bar ul {
+        gap: 15px;
+    }
+    main {
+        width: 90%;
+        margin: 5% 0;
+        align-items: center;
+    }
+    main h1 {
+        font-size: 3.5rem;
+    }
 }
